--- a/reuse/code/dialogs/transfer-assignation/transfer-assignation.dialog.scss
+++ b/reuse/code/dialogs/transfer-assignation/transfer-assignation.dialog.scss
@@ -4,6 +4,7 @@
   .results {
     overflow-y: auto;
     max-height: calc(100vh - 500px);
+    min-height: 60px;
 
     > table {
       width: 100%;
