--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.scss
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use '../../mat-button-variants' as button-variants;
 
 $app-primary: mat.define-palette(mat.$light-blue-palette, 800);
 $app-accent: mat.define-palette(mat.$light-blue-palette, A200, A100, A400);
@@ -36,6 +37,7 @@ $app-theme: mat.define-light-theme((
 @include mat.icon-button-theme($app-theme);
 @include mat.ripple-theme($app-theme);
 @include mat.progress-spinner-theme($app-theme);
+@include button-variants.color($app-theme);
 
 :host {
   display: block;
