add translated aria-label

--- a/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
+++ b/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
@@ -30,6 +30,7 @@
               mat-icon-button
               *ngIf="prescriptionForm.status !== 'SUCCESS' && createPrescriptionForms.length > 1"
               (click)="$event.stopPropagation(); clickDeletePrescription.emit({form: prescriptionForm, templateName: template})"
+              [attr.aria-label]="'prescription.ariaLabel.delete' | translate"
             >
               <mat-icon>delete</mat-icon>
             </button>
