--- a/reuse/code/components/paginator/paginator.component.html
+++ b/reuse/code/components/paginator/paginator.component.html
@@ -1,7 +1,7 @@
-<button data-cy="double_arrow_left" mat-icon-button color="accent" type="button" (click)="changePage.emit(1)" [disabled]="page === 1">
+<button data-cy="double_arrow_left" mat-icon-button color="accent" type="button" (click)="changePage.emit(1)" [disabled]="page === 1" [attr.aria-label]="'pagination.ariaLabel.firstPage' | translate">
   <mat-icon>keyboard_double_arrow_left</mat-icon>
 </button>
-<button data-cy="simple_arrow_left" mat-icon-button color="accent" type="button" (click)="changePage.emit(page - 1)" [disabled]="page === 1">
+<button data-cy="simple_arrow_left" mat-icon-button color="accent" type="button" (click)="changePage.emit(page - 1)" [disabled]="page === 1" [attr.aria-label]="'pagination.ariaLabel.previousPage' | translate">
   <mat-icon>keyboard_arrow_left</mat-icon>
 </button>
 
@@ -24,10 +24,10 @@
 </div>
 
 <button data-cy="simple_arrow_right" mat-icon-button color="accent" type="button" (click)="changePage.emit(page + 1)"
-        [disabled]="page === totalPages">
+        [disabled]="page === totalPages" [attr.aria-label]="'pagination.ariaLabel.nextPage' | translate">
   <mat-icon>keyboard_arrow_right</mat-icon>
 </button>
 <button data-cy="double_arrow_right" mat-icon-button color="accent" type="button" (click)="changePage.emit(totalPages)"
-        [disabled]="page === totalPages">
+        [disabled]="page === totalPages" [attr.aria-label]="'pagination.ariaLabel.lastPage' | translate">
   <mat-icon>keyboard_double_arrow_right</mat-icon>
 </button>
