delete - at the end

--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
@@ -136,7 +136,7 @@
                         <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.start! | date: 'dd/MM/yyyy'}} - </span>
                       </ng-container>
                       <ng-container *ngIf="task.executionPeriod?.end">
-                        <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.end! | date: 'dd/MM/yyyy'}} - </span>
+                        <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.end! | date: 'dd/MM/yyyy'}}</span>
                       </ng-container>
                     </div>
                     <div class="organization-caregiver-list">
@@ -151,7 +151,7 @@
                                 <span style="font-size: 14px; color:#8f8f8f">{{performertask.executionPeriod?.start! | date: 'dd/MM/yyyy'}} - </span>
                               </ng-container>
                               <ng-container *ngIf="performertask.executionPeriod?.end">
-                                <span style="font-size: 14px; color:#8f8f8f">{{performertask.executionPeriod?.end! | date: 'dd/MM/yyyy'}} - </span>
+                                <span style="font-size: 14px; color:#8f8f8f">{{performertask.executionPeriod?.end! | date: 'dd/MM/yyyy'}}</span>
                               </ng-container>
                             </div>
                             <button
@@ -237,7 +237,7 @@
                           <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.start! | date: 'dd/MM/yyyy'}} - </span>
                         </ng-container>
                         <ng-container *ngIf="task.executionPeriod?.end">
-                          <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.end! | date: 'dd/MM/yyyy'}} - </span>
+                          <span style="font-size: 14px; color:#8f8f8f">{{task.executionPeriod?.end! | date: 'dd/MM/yyyy'}}</span>
                         </ng-container>
                       </div>
 
