--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.scss
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.scss
@@ -318,7 +318,7 @@ nihdi-referral-prescription-form-details {
     }
   }
 }
-.prescriber-actions {
+.prescriber-actions, .button-group {
   button {
     margin-right: 0.25rem;
 
