--- a/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.html
+++ b/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.html
@@ -12,17 +12,17 @@
       <div class="page-info">
         <app-active-page
           data-cy="numberOfPrescriptions"
-          [page]="viewState.params!['prescriptions']!['page']"
-          [pageSize]="viewState.params!['prescriptions']!['pageSize']"
-          [total]="viewState.data!.prescriptions!.total"
-          [label]="'prescription.pagination.prescriptions' | translate:{count:viewState.data!.prescriptions!.total}"
+          [page]="viewState.params!['prescriptions']?.['page'] || 1"
+          [pageSize]="viewState.params!['prescriptions']?.['pageSize'] || 10"
+          [total]="viewState.data!.prescriptions?.total || 0"
+          [label]="'prescription.pagination.prescriptions' | translate:{count:viewState.data!.prescriptions?.total || 0}"
         ></app-active-page>
 
         <div class="page-size">
           {{'prescription.pagination.pageSize' | translate}}:
           <mat-select
             data-cy="select-prescription-pagination"
-            [value]="viewState.params!['prescriptions']!['pageSize'] || 10"
+            [value]="viewState.params!['prescriptions']?.['pageSize'] || 10"
             (selectionChange)="loadData(1, $event.value)"
           >
             <mat-option [value]="10">10</mat-option>
@@ -33,15 +33,18 @@
         </div>
       </div>
 
+      @if(viewState.data?.prescriptions) {
         <app-prescriptions-table
           [prescriptions]="viewState.data!.prescriptions!"
           (clickPrescription)="clickOpenPrescriptionDetails.emit($event)"
         ></app-prescriptions-table>
+      }
+
         <div class="pagination">
         <app-paginator
-          [total]="viewState.data!.prescriptions!.total"
-          [page]="viewState.params!['prescriptions']!['page'] || 1"
-          [pageSize]="viewState.params!['prescriptions']!['pageSize'] || 10"
+          [total]="viewState.data!.prescriptions?.total || 0"
+          [page]="viewState.params!['prescriptions']?.['page'] || 1"
+          [pageSize]="viewState.params!['prescriptions']?.['pageSize'] || 10"
           (changePage)="loadData($event, viewState.params!['prescriptions']!['pageSize'])"
         ></app-paginator>
       </div>
@@ -51,17 +54,17 @@
       <div class="page-info">
         <app-active-page
           data-cy="numberOfProposals"
-          [page]="viewState.params!['proposals']!['page']"
-          [pageSize]="viewState.params!['proposals']!['pageSize']"
-          [total]="viewState.data!.proposals!.total"
-          [label]="'proposal.pagination.proposals' | translate:{count:viewState.data!.proposals!.total}"
+          [page]="viewState.params!['proposals']?.['page'] || 1"
+          [pageSize]="viewState.params!['proposals']?.['pageSize'] || 10"
+          [total]="viewState.data!.proposals?.total || 0"
+          [label]="'proposal.pagination.proposals' | translate:{count:viewState.data!.proposals?.total || 0}"
         ></app-active-page>
 
         <div class="page-size">
           {{'proposal.pagination.pageSize' | translate}}:
           <mat-select
             data-cy="select-proposals-pagination"
-            [value]="viewState.params!['proposals']!['pageSize'] || 10"
+            [value]="viewState.params!['proposals']?.['pageSize'] || 10"
             (selectionChange)="loadData(1, $event.value)"
           >
             <mat-option [value]="10">10</mat-option>
@@ -72,15 +75,17 @@
         </div>
       </div>
 
+      @if(viewState.data?.proposals) {
       <app-prescriptions-table
         [prescriptions]="viewState.data!.proposals!"
         (clickPrescription)="clickOpenPrescriptionDetails.emit($event)"
       ></app-prescriptions-table>
+      }
       <div class="pagination">
         <app-paginator
-          [total]="viewState.data!.proposals!.total"
+          [total]="viewState.data!.proposals?.total || 0"
           [page]="viewState.params!['proposals']!['page'] || 1"
-          [pageSize]="viewState.params!['proposals']!['pageSize'] || 10"
+          [pageSize]="viewState.params!['proposals']?.['pageSize'] || 10"
           (changePage)="loadData($event, viewState.params!['proposals']!['pageSize'])"
         ></app-paginator>
       </div>
