--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
@@ -23,7 +23,7 @@
               </div>
               <div class="actions">
                 <button
-                  *ngIf="prescription | canCancelPrescription: viewState.data!.currentUser.ssin"
+                  *ngIf="prescription | canCancelPrescriptionOrProposal: viewState.data!.currentUser.ssin"
                   mat-raised-button
                   type="button"
                   color="accent"
