--- a/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.scss
+++ b/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.scss
@@ -61,6 +61,7 @@ $app-theme: mat.define-light-theme((
   display: flex;
   column-gap: 0.5rem;
   align-items: center;
+  min-width: 195px;
 
   mat-select {
     background-color: white;
