--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
@@ -43,7 +43,7 @@
                   {{'prescription.duplicate' | translate}}
                 </button>
                 <button
-                  *ngIf="prescription.templateCode | canExtendPrescription: prescription"
+                  *ngIf="prescription | canExtendPrescription"
                   mat-raised-button
                   type="button"
                   (click)="clickExtend.emit(prescription)"
